[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/AnimalsFarmAndPuzzlePack/AnimalsFarmAndPuzzlePack/Terrain_Elevated/Ground_01.png" type="Texture" id=1]
[ext_resource path="res://assets/AnimalsFarmAndPuzzlePack/AnimalsFarmAndPuzzlePack/Terrain_Flat/Grass_Light.png" type="Texture" id=2]
[ext_resource path="res://assets/AnimalsFarmAndPuzzlePack/AnimalsFarmAndPuzzlePack/Terrain_Common/Bridge.png" type="Texture" id=3]
[ext_resource path="res://assets/AnimalsFarmAndPuzzlePack/AnimalsFarmAndPuzzlePack/Terrain_Flat/Grass_Dark.png" type="Texture" id=4]
[ext_resource path="res://assets/AnimalsFarmAndPuzzlePack/AnimalsFarmAndPuzzlePack/Terrain_Common/Water.png" type="Texture" id=5]
[ext_resource path="res://scenes/Pig.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Platform.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Frogger.gd" type="Script" id=8]
[ext_resource path="res://assets/AnimalsFarmAndPuzzlePack/AnimalsFarmAndPuzzlePack/Objects/BeachBall.png" type="Texture" id=9]
[ext_resource path="res://assets/AnimalsFarmAndPuzzlePack/AnimalsFarmAndPuzzlePack/Objects/Tree.png" type="Texture" id=10]
[ext_resource path="res://assets/AnimalsFarmAndPuzzlePack/AnimalsFarmAndPuzzlePack/Objects/Boulders.png" type="Texture" id=11]
[ext_resource path="res://assets/AnimalsFarmAndPuzzlePack/AnimalsFarmAndPuzzlePack/Objects/Danger_Water.png" type="Texture" id=12]
[ext_resource path="res://assets/AnimalsFarmAndPuzzlePack/AnimalsFarmAndPuzzlePack/Objects/Flag.png" type="Texture" id=13]
[ext_resource path="res://scenes/WinSquare.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://scenes/Level 0.gd" type="Script" id=16]
[ext_resource path="res://scenes/StartArea.tscn" type="PackedScene" id=17]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 128, 0, 128, 192, 0, 192 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="TileSet" id=3]
0/name = "Grass_Dark.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Grass_Light.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 96 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Water.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 96 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
4/name = "Ground_01.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 96 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
6/name = "Bridge.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 128, 96 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "BeachBall.png 7"
7/texture = ExtResource( 9 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 128, 128 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Tree.png 8"
8/texture = ExtResource( 10 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 128, 192 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 1 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 1
9/name = "Boulders.png 9"
9/texture = ExtResource( 11 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 128, 128 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 2 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "Danger_Water.png 10"
10/texture = ExtResource( 12 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 0, 128, 128 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Flag.png 11"
11/texture = ExtResource( 13 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 128, 128 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0

[sub_resource type="DynamicFont" id=4]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 0 )
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=5]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 0 )
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=6]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Title:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "blink"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ToStart:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ToStart:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Frogger" type="Node2D" groups=[
"pfListeners",
]]
position = Vector2( 0, 100.243 )
script = ExtResource( 8 )

[node name="Water" type="TileMap" parent="."]
z_index = -2
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( -262144, 8, 0, -262133, 8, 0, -262132, 8, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 2, 0, -196602, 2, 0, -196601, 2, 0, -196600, 2, 0, -196599, 2, 0, -196598, 2, 0, -196597, -1610612736, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 2, 0, -131065, 2, 0, -131064, 2, 0, -131063, 2, 0, -131062, -1610612736, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 65550, 2, 0, 65551, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 196608, 2, 0, 196609, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196616, 2, 0, 196617, 2, 0, 196618, 2, 0, 196619, 2, 0, 196620, 2, 0, 196621, 2, 0, 196622, 2, 0, 196623, 2, 0, 262144, 2, 0, 262145, 2, 0, 262146, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 2, 0, 262152, 2, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262159, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327692, 2, 0, 327693, 2, 0, 327694, 2, 0, 327695, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0, 393222, 2, 0, 393223, 2, 0, 393224, 2, 0, 393225, 2, 0, 393226, 2, 0, 393227, 2, 0, 393228, 2, 0, 393229, 2, 0, 393230, 2, 0, 393231, 2, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458767, 2, 0 )

[node name="Grass" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( -327678, 8, 0, -196606, 8, 0, -196604, -1073741824, 0, -196595, 8, 0, -131067, -1073741824, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65543, 3, 0, 458759, 3, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0 )

[node name="Pig" parent="." groups=[
"pfListeners",
] instance=ExtResource( 6 )]
position = Vector2( 572.973, 518.753 )

[node name="DeathTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true

[node name="WinSquare" parent="." instance=ExtResource( 14 )]
scale = Vector2( 8, 1 )

[node name="GrassPlatform" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 512 )
scale = Vector2( 8, 1 )
startArea = true

[node name="Levels" type="Control" parent="."]
margin_left = -8.0
margin_top = -100.243
margin_right = -8.0
margin_bottom = -100.243
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level 0" type="Control" parent="Levels"]
margin_left = 8.88892
margin_top = 110.555
margin_right = 1032.89
margin_bottom = 710.555
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Levels/Level 0"]
margin_left = 382.0
margin_top = 100.0
margin_right = 673.0
margin_bottom = 200.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
text = "Pig Time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToStart" type="Label" parent="Levels/Level 0"]
margin_left = 278.0
margin_top = 284.0
margin_right = 780.0
margin_bottom = 342.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 0 )
text = "Press space to start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleFade" type="AnimationPlayer" parent="Levels/Level 0"]
anims/fade = SubResource( 6 )

[node name="ToStartBlink" type="AnimationPlayer" parent="Levels/Level 0"]
anims/blink = SubResource( 7 )

[node name="StartArea" parent="Levels/Level 0" instance=ExtResource( 17 )]
position = Vector2( 479.793, 406.035 )

[node name="Level 1" type="Control" parent="Levels" groups=[
"levels",
]]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="TileMap" parent="Levels/Level 1"]
position = Vector2( 0, 100.243 )
z_index = -1
tile_set = SubResource( 3 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -131072, 8, 0, -131071, 8, 0, -131067, 8, 0, -65529, 11, 0, -65526, 9, 0, 196613, 7, 0, 393218, 8, 0, 393229, 8, 0, 393231, 8, 0, 458752, 9, 0, 458762, 10, 0 )

[node name="One" parent="Levels/Level 1" instance=ExtResource( 7 )]
position = Vector2( 448, 484.243 )

[node name="Two" parent="Levels/Level 1" instance=ExtResource( 7 )]
position = Vector2( 448, 356.243 )

[node name="Three" parent="Levels/Level 1" instance=ExtResource( 7 )]
position = Vector2( 448, 228.243 )

[node name="StartArea" parent="Levels/Level 1" instance=ExtResource( 17 )]
position = Vector2( 488.682, 516.59 )

[node name="Level 2" type="Control" parent="Levels" groups=[
"levels",
]]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="TileMap" parent="Levels/Level 2"]
position = Vector2( 0, 100.243 )
z_index = -1
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( -131072, 8, 0, -131071, 8, 0, -131067, 8, 0, -65529, 11, 0, -65526, 9, 0, 393218, 8, 0, 393229, 8, 0, 393231, 8, 0, 458752, 9, 0, 458762, 10, 0 )

[node name="One" parent="Levels/Level 2" instance=ExtResource( 7 )]
position = Vector2( 464, 488 )

[node name="Two" parent="Levels/Level 2" instance=ExtResource( 7 )]
position = Vector2( 264, 360 )
moveable = true
xL = 264
xR = 632

[node name="Three" parent="Levels/Level 2" instance=ExtResource( 7 )]
position = Vector2( 456, 232 )

[node name="StartArea" parent="Levels/Level 2" instance=ExtResource( 17 )]
position = Vector2( 488.682, 516.59 )
[connection signal="died" from="." to="Pig" method="_on_Frogger_died"]
[connection signal="revived" from="." to="Pig" method="_on_Frogger_revived"]
[connection signal="revive" from="Pig" to="." method="_on_Pig_revive"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="draw" from="Levels/Level 0" to="Levels/Level 0" method="_on_Level_0_draw"]
[connection signal="hide" from="Levels/Level 0" to="Levels/Level 0" method="_on_Level_0_hide"]
[connection signal="animation_finished" from="Levels/Level 0/TitleFade" to="Levels/Level 0" method="_on_TitleFade_animation_finished"]

[editable path="Pig"]
